logs/dag_id=spaceX_project/run_id=scheduled__2024-07-09T000000+0000/task_id=load_charachteristics/attempt=20.log
[2024-07-10T11:57:42.189+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-10T11:57:42.236+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [queued]>
[2024-07-10T11:57:42.264+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [queued]>
[2024-07-10T11:57:42.265+0000] {taskinstance.py:2306} INFO - Starting attempt 20 of 20
[2024-07-10T11:57:42.294+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): load_charachteristics> on 2024-07-09 00:00:00+00:00
[2024-07-10T11:57:42.304+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=731) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-10T11:57:42.307+0000] {standard_task_runner.py:63} INFO - Started process 733 to run task
[2024-07-10T11:57:42.317+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'spaceX_project', 'load_charachteristics', 'scheduled__2024-07-09T00:00:00+00:00', '--job-id', '579', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmpui42y963']
[2024-07-10T11:57:42.329+0000] {standard_task_runner.py:91} INFO - Job 579: Subtask load_charachteristics
[2024-07-10T11:57:42.794+0000] {task_command.py:426} INFO - Running <TaskInstance: spaceX_project.load_charachteristics scheduled__2024-07-09T00:00:00+00:00 [running]> on host afe5e479c9b4
[2024-07-10T11:57:42.985+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='rustam' AIRFLOW_CTX_DAG_ID='spaceX_project' AIRFLOW_CTX_TASK_ID='load_charachteristics' AIRFLOW_CTX_EXECUTION_DATE='2024-07-09T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='20' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-09T00:00:00+00:00'
[2024-07-10T11:57:42.986+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-10T11:57:43.034+0000] {sql.py:276} INFO - Executing: 
            COPY charachteristics()
        
[2024-07-10T11:57:43.051+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-10T11:57:43.089+0000] {base.py:84} INFO - Using connection ID 'cosmos' for task execution.
[2024-07-10T11:57:43.103+0000] {sql.py:487} INFO - Running statement: 
            COPY charachteristics()
        , parameters: None
[2024-07-10T11:57:43.106+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-10T11:57:43.109+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 2:             COPY charachteristics()
                                          ^

[2024-07-10T11:57:43.133+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=spaceX_project, task_id=load_charachteristics, run_id=scheduled__2024-07-09T00:00:00+00:00, execution_date=20240709T000000, start_date=20240710T115742, end_date=20240710T115743
[2024-07-10T11:57:43.154+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 579 for task load_charachteristics (syntax error at or near ")"
LINE 2:             COPY charachteristics()
                                          ^
; 733)
[2024-07-10T11:57:43.212+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-10T11:57:43.508+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-10T11:57:43.511+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
